Attempt at Player and Ship creation

--- a/index.html
+++ b/index.html
@@ -154,11 +154,15 @@
     </script>
   <div id="imageCollection" style="height:0"></div>
 
+  <script type="text/javascript" src="./support/make.js"></script>
   <script type="text/javascript" src="./support/matrix.js"></script>
   <script type="text/javascript" src="./support/light.js"></script>
   <script type="text/javascript" src="./support/material.js"></script>
   <script type="text/javascript" src="./support/model.js"></script>
   <script type="text/javascript" src="./support/scene.js"></script>
+  <script type="text/javascript" src="./src/player.js"></script>
+  <script type="text/javascript" src="./src/asteroids.js"></script>
+  <script type="text/javascript" src="./src/saucers.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
 
