--- a/index.html
+++ b/index.html
@@ -160,10 +160,12 @@
   <script type="text/javascript" src="./support/material.js"></script>
   <script type="text/javascript" src="./support/model.js"></script>
   <script type="text/javascript" src="./support/scene.js"></script>
-  <script type="text/javascript" src="./src/player.js"></script>
-  <script type="text/javascript" src="./src/asteroids.js"></script>
-  <script type="text/javascript" src="./src/saucers.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="./game/player.js"></script>
+  <script type="text/javascript" src="./game/asteroids.js"></script>
+  <script type="text/javascript" src="./game/saucers.js"></script>
+  <script type="text/javascript" src="./game/script.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
+
 </head>
 
 <body style='margin:0px' onload='main()'>
