--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
       font-family: 'Arial', sans-serif;
       background: url('/Asteroids/assets/Space.png');
       color: white;
-      text-align: center;
-      margin: 0;
       padding: 0;
     }
 
@@ -23,6 +21,7 @@
     }
 
     .menu h1 {
+      text-align: center;
       font-size: 3em;
       margin-bottom: 20px;
     }
@@ -193,7 +192,7 @@
     </script>
   <div id="imageCollection" style="height:0"></div>
 
-  <script type="text/javascript" src="./main.js"></script>
+  <script type="text/javascript" src="./statemachine.js"></script>
   <script type="text/javascript" src="./support/make.js"></script>
   <script type="text/javascript" src="./support/matrix.js"></script>
   <script type="text/javascript" src="./support/light.js"></script>
