--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
   <script type="text/javascript" src="./game/asteroids.js"></script>
   <script type="text/javascript" src="./game/saucers.js"></script>
   <script type="text/javascript" src="./game/background.js"></script>
+  <script type="text/javascript" src="./game/game.js"></script>
   <script type="text/javascript" src="./game/script.js"></script>
   <script type="text/javascript" src="./attract/main_menu.js"></script>
 
