--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
   <script type="text/javascript" src="./support/model.js"></script>
   <script type="text/javascript" src="./support/scene.js"></script>
   <script type="text/javascript" src="./game/player.js"></script>
+  <script type="text/javascript" src="./game/projectile.js"></script>
   <script type="text/javascript" src="./game/asteroids.js"></script>
   <script type="text/javascript" src="./game/saucers.js"></script>
   <script type="text/javascript" src="./game/background.js"></script>
