--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       margin-bottom: 20px;
     }
 
+    a {
+      color: #000;
+    }
+
     button {
       background-color: #fff;
       color: #000;
