--- a/render/classic.html
+++ b/render/classic.html
@@ -217,9 +217,10 @@
 
         vec4 edge = vec4(0.0, 0.0, 0.0, 0.0);
 
-        if (dot(vNormal, vnLight) < 0.2)
+        //if (dot(vNormal, vnLight) < 0.7)
+        if (dot(vNormal, vec3(0, 0, 1)) < 0.7)
         {
-          edge = vec4(1.0, 1.0, 1.0, 1.0);
+          edge = vec4(1.0, 0.0, 0.0, 1.0);
         };
 
         // KB - Color blending has been changed from modulative to additive 
