Fixed Saucers to fly and spawn correctly

--- a/render/modern.html
+++ b/render/modern.html
@@ -225,6 +225,7 @@
       }
     </script>
     <script type="text/javascript" src="../statemachine.js"></script>
+    <script type="text/javascript" src="../support/coordinateGenerator.js"></script>
     <script type="text/javascript" src="../support/make.js"></script>
     <script type="text/javascript" src="../support/matrix.js"></script>
     <script type="text/javascript" src="../support/light.js"></script>
