added life system

--- a/render/classic.html
+++ b/render/classic.html
@@ -246,7 +246,7 @@
   <script type="text/javascript" src="../game/projectile.js"></script>
   <script type="text/javascript" src="../game/asteroids.js"></script>
   <script type="text/javascript" src="../game/saucers.js"></script>
-  <script type="text/javascript" src="../game/background.js"></script>
+  <script type="text/javascript" src="../game/extras.js"></script>
   <script type="text/javascript" src="../game/game.js"></script>
   <script type="text/javascript" src="../game/script_classic.js"></script>
   <script type="text/javascript" src="../attract/main_menu.js"></script>
