--- a/render/modern.html
+++ b/render/modern.html
@@ -236,7 +236,7 @@
     <script type="text/javascript" src="../game/projectile.js"></script>
     <script type="text/javascript" src="../game/asteroids.js"></script>
     <script type="text/javascript" src="../game/saucers.js"></script>
-    <script type="text/javascript" src="../game/background.js"></script>
+    <script type="text/javascript" src="../game/extras.js"></script>
     <script type="text/javascript" src="../game/game.js"></script>
     <script type="text/javascript" src="../game/script_modern.js"></script>
     <script type="text/javascript" src="../attract/main_menu.js"></script>
