Added Instructions, Attemped to make explosion on impact

--- a/render/classic.html
+++ b/render/classic.html
@@ -248,8 +248,8 @@
   <script type="text/javascript" src="../game/extras.js"></script>
   <script type="text/javascript" src="../game/game.js"></script>
   <script type="text/javascript" src="../game/script.js"></script>
-  <script type="text/javascript" src="../attract/main_menu.js"></script>
-  <script type="text/javascript" src="../attract/scoreboard.js"></script>
+  <script type="text/javascript" src="../menu_controls/main_menu.js"></script>
+  <script type="text/javascript" src="../menu_controls/scoreboard.js"></script>
 
 </head>
 
