--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       window.cancelAnimationFrame(animationFrameId);
       animationFrameId = null;
 
-      // Remove existing canvas (if any)
+      // Remove existing canvas
       var oldCanvas = document.getElementById("canvas");
       if (oldCanvas) {
         container.removeChild(oldCanvas);
